[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.93.2",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "cryptography>=45.0.5",
    "flask-migrate>=4.1.0",
    "requests>=2.32.4",
    "yfinance>=0.2.65",
    "schedule>=1.2.2",
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "redis>=6.2.0",
    "celery>=5.5.3",
    "python-dotenv>=1.1.1",
    "websockets>=11.0",
    "PyJWT>=2.8.0",
    "schwabdev>=2.5.0",
    "flask-cors>=6.0.1",
    "flask-caching>=2.3.0",
    "pytest>=8.4.1",
]
